--- a/environment.conf
+++ b/environment.conf
@@ -1,2 +1,3 @@
 modulepath     = site-modules:modules:$basemodulepath
-config_version = 'scripts/config_version.sh $environmentpath $environment'
+#config_version = 'scripts/config_version.sh $environmentpath $environment'
+config_version = '/usr/bin/git --git-dir $confdir/environments/$environment/.git rev-parse HEAD'
